# project-colab

./: .dockerignore  Dockerfile  README.md  fly.development.toml  fly.production.toml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy-develompment.yml  fly-deploy-production.yml
app/: main.py
static/: index.html
