[tool.poetry]
name = "app"
version = "0.0.0"
description = ""
authors = ["recursive_while_loop <recursive_while_loop@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.112.2" }
uvicorn = { extras = ["standard"], version = "^0.30.6" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
